--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,8 @@ h2{
   height: 100vh;
   float: right;
   background-color: #111;
-  color: rgb(0, 255, 0);
+  /*color: rgb(0, 255, 0);*/
+  color: white;
   overflow-y: hidden;
   overflow-x: hidden;
 }
